# samsmart_pd_boxes

./: .readthedocs.yaml  LICENSE  README.md  pyproject.toml
config/: __init__.py  example_config.toml
docs/: conf.py  docstrings_parser.py  index.md  requirements.txt
resources/: __init__.py  households.toml
samsmart_pd_boxes/: __init__.py  analysis.py  etl.py  plotting.py
