[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "samsmart-pd-boxes"
description = """
A library to pre-process, analyze and plot sensor data captured by the presence
detection (PD) boxes and hosted at open.INC."""
readme = "README.md"
authors = [{ name = "Yannik Potdevin", email = "ypo.uzl@proton.me" }]
maintainers = [{ name = "Yannik Potdevin", email = "ypo.uzl@proton.me" }]
license = { file = "LICENSE" }
requires-python = ">=3.10"
version = "0.0.1"
dependencies = [
    "pandas~=2.2",
    "plotly~=5.24",
    "pydantic~=2.7",
    "requests~=2.32",
    "tomli~=2.0",
]
classifiers = [
    "Development Status :: 1 - Planning",
    "Intended Audience :: Developers",
]

[project.urls]
source = "https://github.com/ypotdevin/samsmart_pd_boxes"

[project.optional-dependencies]
dev = ["samsmart-pd-boxes", "pre-commit~=3.8", "ruff~=0.6"]

[tool.ruff]
line-length = 88

[tool.ruff.lint]
# Add the `line-too-long` rule to the enforced rule set.
extend-select = ["E501"]
